add software circuit hardware sections

--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -9,6 +9,9 @@
   {% include call-to-action.html %}
   {% include services.html %}
   {% include portfolio.html %}
+  {% include software.html %}
+  {% include circuit.html %}
+  {% include hardware.html %}
   {% include aside.html %}
   {% include contact.html %}
   {% include scripts.html %}
