--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,8 +1,9 @@
-  <aside class="bg-dark">
+  <aside class="bg-primary">
       <div class="container text-center">
           <div class="call-to-action">
               <h2>Download the code from Github!</h2>
-              <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+              <hr class="light">
+              <a href="https://github.com/NeoBreath/neobreath" class="btn btn-default btn-xl wow tada" target="_blank">Download Now!</a>
           </div>
       </div>
   </aside>
