--- a/_includes/services.html
+++ b/_includes/services.html
@@ -11,30 +11,30 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <i class="fa fa-4x fa-unlock wow bounceIn text-primary"></i>
+                    <h3>Open Source</h3>
+                    <p class="text-muted">NeoBreath ventilator is 100% open source.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <i class="fa fa-4x fa-cogs wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <h3>AI Enabled</h3>
+                    <p class="text-muted">Deep learning model is embeded to learn respiratory patterns.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Up to Date</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    <i class="fa fa-4x fa-usd wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <h3>Cost Effective</h3>
+                    <p class="text-muted">Building up the ventilator only costs few hundred dollars.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Made with Love</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
+                    <p class="text-muted">We hope NeoBreath can help during the pandemic time.</p>
                 </div>
             </div>
         </div>
